Adding subgoals backend
